# bull_run

./: .gitignore  README.md  _test_scraper.py  app.py  chat.py  chat.py.bak  cli.py  implementation_plan_add_thinkingdrop.md  presets.json  pyproject.toml  scraper.py  summarizer.py
docs/: fix_thinking_streaming_plan.md
docs/superpowers/plans/: 2026-05-30-stock-news-aggregator.md  2026-05-31-custom-sources.md  2026-06-08-presets.md  2026-07-05-follow-up-chat.md  2026-07-11-efficient-scraping.md  2026-07-12-fix-infinite-loop.md  followup_code_review.md  implementation_plan.md
docs/superpowers/specs/: 2026-05-30-stock-news-aggregator-design.md  2026-05-31-custom-sources-design.md  2026-06-08-presets-design.md  2026-07-05-follow-up-chat-design.md
tests/: conftest.py  test_chat.py  test_presets.py  test_scraper.py  test_summarizer.py
utils/: prompts.py
